@@ -1,3 +1,6 @@
+[SNAPSHOT]
+ * add Google Async Exmaple (with bugfix for it to work)
+
 [2.4.0]
  * APIs 2.0 can define different endpoints for access token and for refresh token (the same urls by default)
  * mark Facebook doesn't support refresh token by throwing UnsupportedOperationException
